# pet-emporio-local

./: .env.example  .gitignore  SETUP.md
gateway/: kong.yml
gateway/plugins/jwt-claims-to-headers/: handler.lua
infra/: docker-compose.staging.yml
keycloak/: pet-emporio-realm.json
pet-emporio/: .env.example  .gitignore  ARCHITECTURE.md  SETUP.md
pet-emporio/gateway/: kong.yml
pet-emporio/gateway/plugins/jwt-claims-to-headers/: schema.lua
pet-emporio/infra/: docker-compose.yml
pet-emporio/infra/postgres/: init.sql
pet-emporio/scripts/: apply-kong-config.sh  start-dev.sh
pet-emporio/services/auth-service/: .env.example  Dockerfile  README.md  alembic.ini  requirements-dev.txt  requirements.txt
pet-emporio/services/auth-service/app/: config.py  main.py
pet-emporio/services/auth-service/migrations/: env.py
pet-emporio/services/user-service/: .env.example  requirements-dev.txt
services/auth-service/: .env  pyproject.toml
services/auth-service/app/: config.py
services/auth-service/app/routers/: internal.py
services/auth-service/app/services/: device_service.py  facebook_auth.py  jwt_service.py  keycloak_service.py  session_service.py
services/auth-service/migrations/: script.py.mako
services/auth-service/migrations/versions/: ded5c63addd2_add_device_registrations.py
services/auth-service/tests/: conftest.py  test_auth.py
services/user-service/: .env  Dockerfile  README.md  alembic.ini  requirements.txt
services/user-service/app/: database.py
services/user-service/tests/: conftest.py  test_users.py
(+57 files in other folders)
