[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auth-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[asyncio]>=5.0",
    "pyjwt[cryptography]>=2.8",
    "passlib[bcrypt]>=1.7",
    "pyotp>=2.9",
    "httpx>=0.27",
    "structlog>=24",
    "pydantic-settings>=2.0",
    "pe-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "fakeredis[aioredis]>=2.23",
    "aiosqlite>=0.20",
    "cryptography>=42",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]